CMock working example for gpio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,18 @@ project(SimpleCProject C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
-# Add the Unity library
-add_library(unity STATIC 
-    ${CMAKE_SOURCE_DIR}/unity/unity.c
-    ${CMAKE_SOURCE_DIR}/unity/unity.h
-    ${CMAKE_SOURCE_DIR}/unity/unity_internals.h
-)
+
 
 # Add the main executable
 add_executable(main main.c)
 
 # Add test_component sources directly to the main target
 target_sources(main PRIVATE
+
     ${CMAKE_SOURCE_DIR}/components/test_component/test_component.c
     ${CMAKE_SOURCE_DIR}/components/stubbed/stubbed.c
+    ${CMAKE_SOURCE_DIR}/components/mocked/mocked.c
+
 
 )
 
@@ -26,17 +24,23 @@ target_sources(main PRIVATE
 target_include_directories(main PRIVATE
     ${CMAKE_SOURCE_DIR}/components/test_component/
     ${CMAKE_SOURCE_DIR}/components/stubbed/
+    ${CMAKE_SOURCE_DIR}/components/mocked/
 )
 
 # Link Unity to the main executable
-target_link_libraries(main unity)
+# target_link_libraries(main unity)
 
+
+# Test components#########################
 # Add the test_test_component executable
 add_executable(test_component_exec
+    ${CMAKE_SOURCE_DIR}/cmock/cmock.c
+    ${CMAKE_SOURCE_DIR}/unity/unity.c
+
     ${CMAKE_SOURCE_DIR}/test/test_test_component.c
     ${CMAKE_SOURCE_DIR}/components/test_component/test_component.c
     ${CMAKE_SOURCE_DIR}/test/stubs/test_stub.c
-
+    ${CMAKE_SOURCE_DIR}/test/mocks/test_mock.c
 )
 
 # Include directories for test_component_exec
@@ -44,9 +48,11 @@ target_include_directories(test_component_exec PRIVATE
     ${CMAKE_SOURCE_DIR}/components/test_component/
     ${CMAKE_SOURCE_DIR}/unity/
     ${CMAKE_SOURCE_DIR}/components/stubbed/
+    ${CMAKE_SOURCE_DIR}/components/mocked/
+    ${CMAKE_SOURCE_DIR}/test/mocks/
+    ${CMAKE_SOURCE_DIR}/unity/
+    ${CMAKE_SOURCE_DIR}/cmock/
 )
-
-# ${CMAKE_SOURCE_DIR}/components/test_component/stubs/
  
 # Link Unity to the test_component_exec executable
-target_link_libraries(test_component_exec unity)
+# target_link_libraries(test_component_exec unity cmock)
